[project]
name = "daily-algorithm"
version = "0.1.0"
description = "My daily algorithm study repository"
authors = [{ name = "VeritasForge", email = "greenfrog@outlook.kr" }]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
